refactor: Base class for persistent message stores